# fastapi

./: .dockerignore  .gitignore  .pylintrc  DEPLOYMENT.md  Dockerfile  Makefile  README.md  init_db.py  main.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: test.yml
app/: database.py  main.py
app/models/: post.py  todo.py  user.py
app/routers/: posts.py  todos.py  users.py
scripts/: dev.py  migrate_db.py
tests/: conftest.py  test_api.py  test_main.py  test_todos.py
