[tool.poetry]
name = "fredriks-fastapi"
version = "0.2.0"
description = "A FastAPI API"
authors = ["Fredrik Frodlund <contact@frippz.se>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
pylint = "^3.3.6"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.dev:start"
test = "scripts.dev:test"
lint = "scripts.dev:lint"
format = "scripts.dev:format"

[tool.black]
line-length = 100
target-version = ['py311']
