[tool.poetry]
name = "fredriks-fastapi"
version = "0.2.0"
description = "A FastAPI API"
authors = ["Fredrik Frodlund <contact@frippz.se>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "3.11.11"
fastapi = "0.115.12"
uvicorn = "0.34.0"
pydantic = "2.10.6"
email-validator = "2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
httpx = "0.28.1"
ruff = "0.11.2"

[build-system]
requires = ["poetry-core==2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.dev:start"
lint = "scripts.dev:lint"
format = "scripts.dev:format"

[tool.black]
line-length = 100
target-version = ['py311']
